--- a/CheckLists/Base.lproj/Main.storyboard
+++ b/CheckLists/Base.lproj/Main.storyboard
@@ -72,7 +72,7 @@
         <!--Add Item-->
         <scene sceneID="xOX-6J-h1p">
             <objects>
-                <tableViewController id="ASz-go-1TW" customClass="AddItemViewController" customModule="CheckLists" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="ASz-go-1TW" customClass="ItemDetailViewController" customModule="CheckLists" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="fGH-DZ-6cQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
