--- a/CheckLists/Base.lproj/Main.storyboard
+++ b/CheckLists/Base.lproj/Main.storyboard
@@ -151,31 +151,82 @@
         <scene sceneID="e9z-lC-OTE">
             <objects>
                 <tableViewController id="mXk-qM-D3Y" customClass="ListDetailViewController" customModule="CheckLists" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="G6K-B1-uIk">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="G6K-B1-uIk">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <sections>
                             <tableViewSection id="yCa-2o-DyT">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="gJk-sk-Lg0">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="50" id="gJk-sk-Lg0">
+                                        <rect key="frame" x="0.0" y="18" width="414" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gJk-sk-Lg0" id="k6B-s3-Bm8">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Name of List" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EqF-xU-ul6">
-                                                    <rect key="frame" x="49" y="4" width="325" height="34"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name of List" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EqF-xU-ul6">
+                                                    <rect key="frame" x="70" y="0.0" width="344" height="50"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                     <connections>
                                                         <outlet property="delegate" destination="mXk-qM-D3Y" id="kMN-pn-yXC"/>
                                                     </connections>
                                                 </textField>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7v-sK-49D">
+                                                    <rect key="frame" x="5" y="0.0" width="45" height="50"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="EqF-xU-ul6" firstAttribute="leading" secondItem="i7v-sK-49D" secondAttribute="trailing" constant="20" id="Cj5-mY-wGd"/>
+                                                <constraint firstAttribute="trailing" secondItem="EqF-xU-ul6" secondAttribute="trailing" id="NLU-8D-FQV"/>
+                                                <constraint firstAttribute="bottom" secondItem="EqF-xU-ul6" secondAttribute="bottom" id="Rdt-FF-qtN"/>
+                                                <constraint firstItem="i7v-sK-49D" firstAttribute="leading" secondItem="k6B-s3-Bm8" secondAttribute="leading" constant="5" id="nZB-cI-TWe"/>
+                                                <constraint firstItem="EqF-xU-ul6" firstAttribute="top" secondItem="k6B-s3-Bm8" secondAttribute="top" id="tEa-uw-QcU"/>
+                                                <constraint firstAttribute="bottom" secondItem="i7v-sK-49D" secondAttribute="bottom" id="uJg-gf-By0"/>
+                                                <constraint firstItem="i7v-sK-49D" firstAttribute="top" secondItem="k6B-s3-Bm8" secondAttribute="top" id="xv8-E0-122"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection id="vtE-nJ-6UY">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="60" id="LF1-9q-XW4">
+                                        <rect key="frame" x="0.0" y="104" width="414" height="60"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LF1-9q-XW4" id="Cf1-k4-EZT">
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="60"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sUq-XS-6R2">
+                                                    <rect key="frame" x="323" y="0.0" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="sUq-XS-6R2" secondAttribute="height" multiplier="1:1" id="Y6i-eu-qz4"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Icon Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4JI-oa-bHN">
+                                                    <rect key="frame" x="5" y="0.0" width="82" height="60"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="sUq-XS-6R2" firstAttribute="top" secondItem="Cf1-k4-EZT" secondAttribute="top" id="1bA-H0-o1H"/>
+                                                <constraint firstAttribute="bottom" secondItem="4JI-oa-bHN" secondAttribute="bottom" id="E6I-zB-AdR"/>
+                                                <constraint firstItem="4JI-oa-bHN" firstAttribute="leading" secondItem="Cf1-k4-EZT" secondAttribute="leading" constant="5" id="I0d-ig-9Mf"/>
+                                                <constraint firstItem="4JI-oa-bHN" firstAttribute="top" secondItem="Cf1-k4-EZT" secondAttribute="top" id="Nf3-Jd-XWl"/>
+                                                <constraint firstAttribute="bottom" secondItem="sUq-XS-6R2" secondAttribute="bottom" id="W1N-3p-nBg"/>
+                                                <constraint firstAttribute="trailing" secondItem="sUq-XS-6R2" secondAttribute="trailing" id="hnT-Ue-bT5"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="yd5-EA-oGc" kind="show" id="i8w-Ut-xJK"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -199,12 +250,43 @@
                     </navigationItem>
                     <connections>
                         <outlet property="doneButton" destination="ygT-bE-w9R" id="DIR-Rg-0Cm"/>
+                        <outlet property="iconImage" destination="sUq-XS-6R2" id="2UZ-ep-LMZ"/>
+                        <outlet property="iconName" destination="4JI-oa-bHN" id="e08-Pb-bN0"/>
                         <outlet property="listNameInput" destination="EqF-xU-ul6" id="K1u-JZ-Dac"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lbN-Vb-LTD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-324.63768115942031" y="-622.09821428571422"/>
+        </scene>
+        <!--Choose an Icon-->
+        <scene sceneID="oUQ-5u-iee">
+            <objects>
+                <tableViewController id="yd5-EA-oGc" customClass="IconPickerViewController" customModule="CheckLists" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wV6-fg-L2w">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Lnw-lz-gqa">
+                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lnw-lz-gqa" id="yIK-yk-neR">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="yd5-EA-oGc" id="JFo-4R-3b7"/>
+                            <outlet property="delegate" destination="yd5-EA-oGc" id="LJB-C6-OLC"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Choose an Icon" id="SdJ-Wn-6oT"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HSz-2C-snT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="409" y="-622"/>
         </scene>
         <!--Check Lists-->
         <scene sceneID="4zO-H0-txS">
