--- a/CheckLists/Base.lproj/Main.storyboard
+++ b/CheckLists/Base.lproj/Main.storyboard
@@ -166,7 +166,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name of List" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EqF-xU-ul6">
-                                                    <rect key="frame" x="70" y="0.0" width="344" height="50"/>
+                                                    <rect key="frame" x="80" y="0.0" width="334" height="50"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits" returnKeyType="done"/>
                                                     <connections>
@@ -174,7 +174,7 @@
                                                     </connections>
                                                 </textField>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7v-sK-49D">
-                                                    <rect key="frame" x="5" y="0.0" width="45" height="50"/>
+                                                    <rect key="frame" x="15" y="0.0" width="45" height="50"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -184,7 +184,7 @@
                                                 <constraint firstItem="EqF-xU-ul6" firstAttribute="leading" secondItem="i7v-sK-49D" secondAttribute="trailing" constant="20" id="Cj5-mY-wGd"/>
                                                 <constraint firstAttribute="trailing" secondItem="EqF-xU-ul6" secondAttribute="trailing" id="NLU-8D-FQV"/>
                                                 <constraint firstAttribute="bottom" secondItem="EqF-xU-ul6" secondAttribute="bottom" id="Rdt-FF-qtN"/>
-                                                <constraint firstItem="i7v-sK-49D" firstAttribute="leading" secondItem="k6B-s3-Bm8" secondAttribute="leading" constant="5" id="nZB-cI-TWe"/>
+                                                <constraint firstItem="i7v-sK-49D" firstAttribute="leading" secondItem="k6B-s3-Bm8" secondAttribute="leading" constant="15" id="nZB-cI-TWe"/>
                                                 <constraint firstItem="EqF-xU-ul6" firstAttribute="top" secondItem="k6B-s3-Bm8" secondAttribute="top" id="tEa-uw-QcU"/>
                                                 <constraint firstAttribute="bottom" secondItem="i7v-sK-49D" secondAttribute="bottom" id="uJg-gf-By0"/>
                                                 <constraint firstItem="i7v-sK-49D" firstAttribute="top" secondItem="k6B-s3-Bm8" secondAttribute="top" id="xv8-E0-122"/>
@@ -203,29 +203,29 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sUq-XS-6R2">
-                                                    <rect key="frame" x="323" y="0.0" width="60" height="60"/>
+                                                    <rect key="frame" x="333" y="5" width="50" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="sUq-XS-6R2" secondAttribute="height" multiplier="1:1" id="Y6i-eu-qz4"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Icon Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4JI-oa-bHN">
-                                                    <rect key="frame" x="5" y="0.0" width="82" height="60"/>
+                                                    <rect key="frame" x="15" y="0.0" width="82" height="60"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="sUq-XS-6R2" firstAttribute="top" secondItem="Cf1-k4-EZT" secondAttribute="top" id="1bA-H0-o1H"/>
+                                                <constraint firstItem="sUq-XS-6R2" firstAttribute="top" secondItem="Cf1-k4-EZT" secondAttribute="top" constant="5" id="1bA-H0-o1H"/>
                                                 <constraint firstAttribute="bottom" secondItem="4JI-oa-bHN" secondAttribute="bottom" id="E6I-zB-AdR"/>
-                                                <constraint firstItem="4JI-oa-bHN" firstAttribute="leading" secondItem="Cf1-k4-EZT" secondAttribute="leading" constant="5" id="I0d-ig-9Mf"/>
+                                                <constraint firstItem="4JI-oa-bHN" firstAttribute="leading" secondItem="Cf1-k4-EZT" secondAttribute="leading" constant="15" id="I0d-ig-9Mf"/>
                                                 <constraint firstItem="4JI-oa-bHN" firstAttribute="top" secondItem="Cf1-k4-EZT" secondAttribute="top" id="Nf3-Jd-XWl"/>
-                                                <constraint firstAttribute="bottom" secondItem="sUq-XS-6R2" secondAttribute="bottom" id="W1N-3p-nBg"/>
+                                                <constraint firstAttribute="bottom" secondItem="sUq-XS-6R2" secondAttribute="bottom" constant="5" id="W1N-3p-nBg"/>
                                                 <constraint firstAttribute="trailing" secondItem="sUq-XS-6R2" secondAttribute="trailing" id="hnT-Ue-bT5"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="yd5-EA-oGc" kind="show" id="i8w-Ut-xJK"/>
+                                            <segue destination="yd5-EA-oGc" kind="show" identifier="chooseIcon" id="i8w-Ut-xJK"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -268,12 +268,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Lnw-lz-gqa">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="categoryCell" textLabel="bxk-4y-wyk" detailTextLabel="mnP-vA-o2X" style="IBUITableViewCellStyleValue1" id="Lnw-lz-gqa">
                                 <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Lnw-lz-gqa" id="yIK-yk-neR">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bxk-4y-wyk">
+                                            <rect key="frame" x="20" y="12" width="33" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mnP-vA-o2X">
+                                            <rect key="frame" x="350" y="12" width="44" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
